# Scouting

./: .env.example  .gitignore  DATA_SOURCES.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  data-refresh.yml
.streamlit/: config.toml
app/: app.py
app/pages/: 1_Leaderboard.py  2_Profil_Joueur.py  3_Scout_Mode.py
app/utils/: __init__.py  data_loader.py
docs/: DOCUMENTATION_FONCTIONNELLE.md  DOCUMENTATION_TECHNIQUE.md  implementation_plan.md  task.md
notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_talent_scoring.ipynb  04_clustering_analysis.ipynb  05_results_synthesis.ipynb
reports/metrics/: cluster_profiles.json  clustering_results.csv  kmeans_k_scores.json  refresh_metadata.json  talent_score_results.json  talent_scores_players.csv
src/: __init__.py  config.py
src/data/: __init__.py  cleaner.py  downloader.py  feature_engineering.py  leaguepedia.py  schema.py
src/models/: __init__.py  clusterer.py  talent_scorer.py
src/utils/: __init__.py  logger.py  metadata.py  monitoring.py
src/visualization/: __init__.py  clustering_viz.py  plots.py  talent_score_viz.py
tests/: __init__.py  conftest.py  test_features.py  test_integration_pipeline.py  test_models.py  test_monitoring.py
tests/fixtures/: generate_fixture.py  oracle_sample.csv
