[project]
name = "kcorp-scouting"
version = "0.1.0"
description = "🏆 Outil ML de scouting esport pour identifier les pépites dans les ERLs européennes de League of Legends"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "bower"},
]
keywords = ["machine-learning", "esports", "league-of-legends", "scouting", "data-science"]

# Aligné sur requirements.txt : uniquement les paquets réellement importés
# par src/ et app/ (torch/shap/seaborn/mwclient/python-dotenv retirés).
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "umap-learn>=0.5",
    "loguru>=0.7",
    "requests>=2.31",
    "matplotlib>=3.7",
    "plotly>=5.15",
    "streamlit>=1.30",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
    "ipykernel>=6.0",
    "jupyter>=1.0",
]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["src"]
# Modules réseau (téléchargement, API Cargo) et tracés matplotlib :
# non exercés par la suite de tests, exclus de la mesure.
omit = [
    "src/visualization/*",
    "src/data/leaguepedia.py",
    "src/data/downloader.py",
]

[tool.pyright]
include = ["src", "notebooks", "tests"]
extraPaths = ["."]

